<resources>
    <string name="app_name">Quiz4WP</string>

    <string name="title_activity_intro">IntroActivity</string>
    <string name="welcome_message">Welcome</string>
    <string name="app_title">QUIZ</string>
    <string name="app_subtitle">Wirtualna Polska</string>
    <string name="app_author">Łukasz Wróblewski</string>
    <string name="btn_retry">RETRY</string>
    <string name="downloading_status">Downloading (%d %%)</string>
    <string name="reading_status">Reading (%d %%)</string>
    <string name="saving_status">Saving (%d %%)</string>
    <string name="content_ready">Ready</string>
    <string name="content_goto_category">Udanej zabawy!</string>
    <string name="unable_to_download_content">Unable to download content</string>
    <string name="no_available_content">No available content</string>
    <string name="go_back">Go back</string>
    <string name="question_no">Pytanie</string>
    <string name="rate_default">Sprobujesz jeszcze raz?</string>
    <string name="question_example_content">Co jest na poniższym obrazku? Podaj poprawną odpowiedź.</string>
    <string name="answer">Answer</string>
    <string name="btnlabel_goto_quizlist">Przejdź do listy quizów</string>
    <string name="btnlabel_retry_quiz">Rozwiąż jeszcze raz</string>
    <string name="finishquestion_title">Ukoczyłes QUIZ !</string>
    <string name="finishquiz_content">Odpowiedziałes na %d %% pytan</string>
    <string name="finishquiz_rate">Poszło Ci całkiem nieźle!</string>
    <string name="error_unable_to_provide_content">Nie można wyswietlic danych</string>
    <string name="error_unable_to_run_quiz">Nie można wyswietlic danego quizu</string>
    <string name="error_unable_to_finish_quiz">Nie można wyswietlic zakonczenia quizu</string>
    <string name="quiz_offline"></string>
    <string name="quiz_online">Kliknij aby pobrać</string>
    <string name="quiz_score">Wynik:</string>
    <string name="quiz_progress">Ukończono:</string>
    <string name="quiz_category">Kategoria:</string>
    <string name="quiz_broken">Uszkodzona zawartosc</string>

</resources>
